cmake_minimum_required(VERSION 3.17)
project(cses)

set(CMAKE_CXX_STANDARD 14)

add_executable(1669 1669.cpp)
add_executable(1678 1678.cpp)
add_executable(1682 1682.cpp)
add_executable(1683 1683.cpp)
add_executable(1676 1676.cpp)
add_executable(1675 1675.cpp)
add_executable(1751 1751.cpp)
add_executable(1192 1192.cpp)
add_executable(1666 1666.cpp)
add_executable(1667 1667.cpp)
add_executable(1668 1668.cpp)
add_executable(1671 1671.cpp)
add_executable(1672 1672.cpp)
add_executable(1673 1673.cpp)
add_executable(1195 1195.cpp)