cmake_minimum_required(VERSION 3.17)
project(cses)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wshadow -Wformat=2 -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fstack-protector")

add_executable(1068 1068.cpp)
add_executable(1069 1069.cpp)
add_executable(1083 1083.cpp)
add_executable(1094 1094.cpp)
add_executable(1130 1130.cpp)
add_executable(1131 1131.cpp)
add_executable(1132 1132.cpp)
add_executable(1133 1133.cpp)
add_executable(1135 1135.cpp)
add_executable(1136 1136.cpp)
add_executable(1137 1137.cpp)
add_executable(1138 1138.cpp)
add_executable(1139 1139.cpp)
add_executable(1143 1143.cpp)
add_executable(1190 1190.cpp)
add_executable(1192 1192.cpp)
add_executable(1193 1193.cpp)
add_executable(1195 1195.cpp)
add_executable(1197 1197.cpp)
add_executable(1621 1621.cpp)
add_executable(1633 1633.cpp)
add_executable(1634 1634.cpp)
add_executable(1635 1635.cpp)
add_executable(1636 1636.cpp)
add_executable(1637 1637.cpp)
add_executable(1638 1638.cpp)
add_executable(1646 1646.cpp)
add_executable(1647 1647.cpp)
add_executable(1648 1648.cpp)
add_executable(1649 1649.cpp)
add_executable(1650 1650.cpp)
add_executable(1651 1651.cpp)
add_executable(1652 1652.cpp)
add_executable(1666 1666.cpp)
add_executable(1667 1667.cpp)
add_executable(1668 1668.cpp)
add_executable(1669 1669.cpp)
add_executable(1671 1671.cpp)
add_executable(1672 1672.cpp)
add_executable(1673 1673.cpp)
add_executable(1674 1674.cpp)
add_executable(1675 1675.cpp)
add_executable(1676 1676.cpp)
add_executable(1678 1678.cpp)
add_executable(1679 1679.cpp)
add_executable(1682 1682.cpp)
add_executable(1683 1683.cpp)
add_executable(1686 1686.cpp)
add_executable(1687 1687.cpp)
add_executable(1688 1688.cpp)
add_executable(1734 1734.cpp)
add_executable(1749 1749.cpp)
add_executable(1751 1751.cpp)
add_executable(2079 2079.cpp)
add_executable(2166 2166.cpp)